Fetching Fake data from Platzi

--- a/src/app/domains/products/components/product/product.component.html
+++ b/src/app/domains/products/components/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="group rounded-lg border">
   <a href="#" class="w-full overflow-hidden rounded-t-lg bg-gray-200">
     <img
-      [src]="product.image"
+      [src]="product.images[0]"
       [alt]="product.title"
       class="h-full w-full object-cover object-center group-hover:opacity-75"
     />
