--- a/src/app/domains/shared/components/header/header.component.html
+++ b/src/app/domains/shared/components/header/header.component.html
@@ -33,7 +33,7 @@
         <div
           class="absolute -top-2 -left-2 rounded h-5 w-5 bg-black text-white text-xs"
         >
-          {{ cart.length }}
+          {{ cart().length }}
         </div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -79,12 +79,12 @@
   <div>
     <div
       class="mx-2 my-4 w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
-      *ngFor="let product of cart"
+      *ngFor="let product of cart()"
     >
       <a href="#">
         <img
           class="p-8 rounded-t-lg"
-          src="{{ product.image }}"
+          src="{{ product.images[0] }}"
           alt="product image"
         />
       </a>
@@ -168,6 +168,6 @@
     </div>
   </div>
   <div>
-    <p>Total: {{ getTotalPrice() }}</p>
+    <p>Total: {{ total() }}</p>
   </div>
 </div>
