Deploy in Vercel

--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,10 +1,12 @@
 <div class="px-10">
   <h1 class="text-lg font-bold">About</h1>
   <p class="text-xs">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, odit,
-    aliquid hic deserunt in modi consequuntur autem dolor consequatur eos
-    voluptatem aut ad assumenda dolores, quas doloribus? Cupiditate, id
-    incidunt?
+    <span highlight
+      >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span
+    >
+    Doloremque, odit, aliquid hic deserunt in modi consequuntur autem dolor
+    consequatur eos voluptatem aut ad assumenda dolores, quas doloribus?
+    Cupiditate, id incidunt?
   </p>
   <p class="text-sm">
     Client number:
