--- a/src/app/domains/products/pages/list/list.component.html
+++ b/src/app/domains/products/pages/list/list.component.html
@@ -1,9 +1,14 @@
 <div class="flex space-x-4 mt-5">
   <div class="w-80">
     <ul>
+      <ul>
+        <a routerLink="/">All</a>
+      </ul>
       @for (category of categories(); track $index) {
       <li>
-        <a href="">{{ category.name }}</a>
+        <a routerLink="/" [queryParams]="{ category_id: category.id }">{{
+          category.name
+        }}</a>
       </li>
       }
     </ul>
